2004-11-01  Shaun McCance  <shaunm@gnome.org>

	* NEWS:
	* configure.in:
	* po/*.po:
	- Version 2.9.1

	* src/Makefile.am:
	- Remove debug for release

2004-11-01  Shaun McCance  <shaunm@gnome.org>

	* configure.in:
	* src/Makefile.am:
	- Do the -fno-rtti thing the way epiphany does it

	* data/ui/yelp-ui.xml:
	* src/yelp-base.c:
	* src/yelp-db-pager.c:
	* src/yelp-utils.c:
	* src/yelp-window.c:
	- Added stub for reload.  Don't use it unless you like things to crash
	- Cancellation is somewhat working

	* po/POTFILES.in:
	- Added data/yelp.schemas.in and src/yelp-settings.c

2004-10-28  James Henstridge  <james@jamesh.id.au>

	* src/Makefile.am: fix up handling of built sources for
	srcdir!=builddir builds.

	* po/POTFILES.in: remove some files that have been removed.

	* data/Makefile.am: add some files to the clean list.

	* Makefile.am: add intltool files to the distclean list.

	* configure.in: clean up a bit, removing obsolete macro usage.

	* autogen.sh: use the gnome-common autogen.sh script.  Request a
	Automake 1.7.

2004-10-26  Shaun McCance  <shaunm@gnome.org>

	* data/ui/yelp-ui.xml:
	* src/Makefile.am:
	* src/yelp-base.c:
	* src/yelp-gecko-utils.cpp:
	* src/yelp-gecko-utils.h:
	* src/yelp-html-gecko.c:
	* src/yelp-html.h:
	* src/yelp-window.c:
	* src/yelp-window.h:
	- Patch from Don Scorgie for popup menus on links

2004-10-26  Shaun McCance  <shaunm@gnome.org>

	* data/yelp.schemas.in:
	* data/ui/yelp.glade:
	* src/yelp-gecko-utils.cpp:
	* src/yelp-gecko-utils.h:
	* src/yelp-html-gecko.c:
	* src/yelp-html.h:
	* src/yelp-settings.c:
	* src/yelp-settings.h:
	- Browse with caret
	- Color fixes

	* src/yelp-window.c:
	- Proper history handling for errors

2004-10-20  Shaun McCance  <shaunm@gnome.org>

	* stylesheets/db2html.xsl.in:
	- Actually select the variable for admon graphics

2004-10-20  Shaun McCance  <shaunm@gnome.org>

	* data/icons/Makefile.am:
	* data/yelp-icon-caution.png:
	* data/yelp-icon-important.png:
	* data/yelp-icon-note.png: