@@ -1,3 +1,11 @@
+2004-11-08  Sebastien Bacher  <seb128@debian.org>
+
+	* configure.in:
+	* src/Makefile.am:
+	* src/yelp-main.c: (main):
+	patch by Christian Persch <chpe@gnome.org> to enable the compilation 
+	against firefox' gtkmozembed.
+
 2004-11-01  Shaun McCance  <shaunm@gnome.org>
 
 	* NEWS:
